RESOLVED FIXED276190
[Genmoji] Inserting Genmoji via the keyboard does not always match the surrounding text size
https://bugs.webkit.org/show_bug.cgi?id=276190
Summary [Genmoji] Inserting Genmoji via the keyboard does not always match the surrou...
Aditya Keerthi
Reported 2024-07-03 12:43:53 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-03 12:44:16 PDT
Aditya Keerthi
Comment 2 2024-07-03 12:50:20 PDT
EWS
Comment 3 2024-07-03 14:38:33 PDT
Committed 280640@main (3fdc4aba9a52): <https://commits.webkit.org/280640@main> Reviewed commits have been landed. Closing PR #30456 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.