[Genmoji] Inserting Genmoji via the keyboard does not always match the surrounding text size https://bugs.webkit.org/show_bug.cgi?id=276190 rdar://131070706

Reviewed by Wenson Hsieh and Abrar Rahman Protyasha.

* Source/WebCore/editing/cocoa/EditorCocoa.mm:
(WebCore::Editor::insertMultiRepresentationHEIC):

Specify `ReplaceSelectionCommand::MatchStyle` to ensure the used font size
matches surrounding text upon insertion.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/AdaptiveImageGlyph.mm:
(TestWebKitAPI::TEST(AdaptiveImageGlyph, InsertAdaptiveImageGlyphMatchStyle)):

Canonical link: https://commits.webkit.org/280640@main